<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">腾讯云 TRTC</string>

    <string name="btn_cancel">取消</string>
    <string name="btn_ok">确定</string>

    <string name="vod_ffplay">ffplay</string>
    <string name="vod_exo">exo</string>

    <string name="title_activity_rtmp_room_demo">RtmpRoomDemoActivity</string>

    <string name="str_room_id_tips">输入房间号</string>
    <string name="str_user_id_tips">输入用户名</string>

    <string name="main_privacy_text">点击查看<a href="http://privacy.qq.com/">隐私政策</a></string>
    <string name="working">正在运行中</string>

    <string name="item_video_conferencing">多人视频会议</string>
    <string name="item_chat_room">语音聊天室</string>
    <string name="item_video_interactive_live_streaming">视频互动</string>
    <string name="item_voice_call">语音通话</string>
    <string name="item_video_call">视频通话</string>
    <string name="item_chat_salon">语音沙龙</string>

    <string name="app_toast_login_success">登录成功</string>
    <string name="app_toast_login_fail">登录IM失败，所有功能不可用[%d]%s</string>

    <string name="app_tv_video_cloud_tools_version">视频云工具包 v%s</string>
    <string name="app_title_share_log">分享日志</string>
    <string name="app_dialog_log_out">确定要退出登录吗？</string>
    <string name="app_dialog_exit_app">确定要退出APP吗？</string>

    <string name="app_item_live_pusher">推流演示（摄像头推流）</string>
    <string name="app_item_live_player">拉流演示</string>
    <string name="app_item_link_mic_new">连麦演示（新方案）</string>
    <string name="app_item_link_mic_old">连麦演示（旧方案）</string>
    <string name="app_item_link_mic">连麦演示</string>
    <string name="app_item_xiao_zhi_bo">小直播</string>
    <string name="app_item_mlvb">移动直播 MLVB</string>

    <string name="app_item_super_player">超级播放器</string>
    <string name="app_item_player">播放器 Player</string>

    <string name="app_item_video_recording">视频录制</string>
    <string name="app_item_effects_editor">特效编辑</string>
    <string name="app_item_video_stitching">视频拼接</string>
    <string name="app_item_picture_transition">图片转场</string>
    <string name="app_item_video_upload">视频上传</string>
    <string name="app_item_xiao_shi_pin">小视频</string>
    <string name="app_item_ugsv">短视频 UGSV</string>

    <string name="app_item_trtc">实时音视频 TRTC</string>
    <string name="app_title_trtc">TRTC</string>

    <string name="app_tv_smart_version">Smart版本 v%s</string>
    <string name="app_tv_main_title">腾讯视频云</string>
    <string name="app_tv_main_version">version = 1.0</string>
    <string name="app_tv_main_bottom_hint">本APP用于展示腾讯视频云终端产品的各类功能</string>

    <string name="app_tv_super_player_version">超级播放器版本 v%s</string>

    <string name="app_tv_trtc_version">腾讯云 TRTC v%s</string>
    <string name="app_tv_video_conferencing_tips">全球端到端平均延时&lt;300ms</string>
    <string name="app_tv_chat_room_tips">支持BGM、混响、变声趣味互动玩法</string>
    <string name="app_tv_video_interactive_live_streaming_tips">PK连麦互动直播，支持1080P，双声道立体声</string>
    <string name="app_tv_voice_call_tips">丢包率70%仍可正常语音通话</string>
    <string name="app_tv_video_call_tips">丢包率50%仍可正常视频通话</string>
    <string name="app_tv_chat_salon_tips">十万人大房间，观众平滑上麦</string>
    <string name="app_tv_ugc_version">腾讯云 UGC v%s</string>
    <string name="app_confirm">确认</string>
    <string name="app_tips_user_name">仅限中文、字母、数字和下划线，2-20个字</string>
    <string name="app_sdk_version">SDK版本</string>
    <string name="app_toast_failed_to_set_username">设置失败: %s</string>
    <string name="app_toast_success_to_set_username">设置成功</string>
    <string name="app_main_page">主页</string>
    <string name="app_my">我的</string>
    <string name="app_login_out">退出登录</string>
    <string name="app_personal_center">个人中心</string>
    <string name="app_privacy_statement">隐私条例</string>
    <string name="app_statement">免责声明</string>
    <string name="app_about">关于</string>
    <string name="app_modify_nickname">修改用户昵称</string>
    <string name="app_input_nickname_hint">请输入用户昵称</string>
    <string name="app_toast_set_username">请设置用户名</string>
    <string name="app_version">应用版本</string>
    <string name="app_statement_detail">TRTC（“本产品”）是由腾讯云提供的一款测试产品，腾讯云享有本产品的著作权和所有权。本产品仅用于功能体验，不得用于任何商业用途。为配合相关部门监管要求，本产品音视频互动全程均有录音录像存档，严禁在使用中有任何但不限于色情、辱骂、暴恐、涉政等违规内容的传播。</string>
</resources>
