<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:text="@string/app_title_trtc"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/img_logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/ic_head" />

        <TextView
            android:id="@+id/tv_login_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/app_login_out"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_title"
        android:background="@color/app_color_main_bg"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/main_recycler_view"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:visibility="gone"
            android:id="@+id/main_tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/app_tv_main_version"
            android:textColor="@color/textColorSecond"
            android:textSize="12sp" />

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/app_tv_main_bottom_hint"
            android:textColor="@color/textColorSecond"
            android:textSize="12sp" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/main_privacy_text"
            android:textColor="@color/textColorSecond"
            android:textSize="13sp" />
    </LinearLayout>
</RelativeLayout>
