<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:toos="http://schemas.android.com/tools"
    android:background="@color/white">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/app_about"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_marginLeft="17dp"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/app_ic_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/main_title"
        app:layout_constraintTop_toTopOf="@id/main_title" />

    <TextView
        android:id="@+id/tv_sdk_version_title"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:text="@string/app_sdk_version"
        android:textColor="@color/app_color_main_text"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_title"/>

    <TextView
        android:id="@+id/tv_sdk_version"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:textColor="@color/app_color_main_text"
        android:textSize="16sp"
        toos:text="Ver 3.0.1.1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_title"/>

    <View
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sdk_version_title"
        android:background="@color/app_color_line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/tv_app_version_title"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:text="@string/app_version"
        android:textColor="@color/app_color_main_text"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sdk_version"/>

    <TextView
        android:id="@+id/tv_app_version"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:textColor="@color/app_color_main_text"
        android:textSize="16sp"
        toos:text="Ver 3.0.1.1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sdk_version"/>

    <View
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_version_title"
        android:background="@color/app_color_line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

</android.support.constraint.ConstraintLayout>
