<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/app_my_info_bg"
        android:layout_width="match_parent"
        android:layout_height="220dp" />

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_marginTop="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:text="@string/app_personal_center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_avatar"
        android:layout_marginTop="50dp"
        android:background="@drawable/app_bg_my_info_content"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@id/rl_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_head"
        android:layout_marginTop="58dp"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/tv_show_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="nickname"/>


    <ImageView
        android:id="@+id/edit_show_name"
        app:layout_constraintLeft_toRightOf="@id/tv_show_name"
        app:layout_constraintTop_toTopOf="@id/tv_show_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_show_name"
        android:src="@drawable/app_ic_edit"
        android:layout_marginLeft="4dp"
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/tv_userid"
        app:layout_constraintTop_toBottomOf="@id/tv_show_name"
        app:layout_constraintLeft_toLeftOf="@id/tv_show_name"
        app:layout_constraintRight_toRightOf="@id/edit_show_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_gravity="center_horizontal"
        tools:text="ID:264738"
        android:textColor="#999999"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/iv_privacy_statement"
        app:layout_constraintTop_toTopOf="@id/tv_privacy_statement"
        app:layout_constraintBottom_toBottomOf="@id/tv_privacy_statement"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:background="@drawable/app_ic_privacy_statement"
        android:layout_width="32dp"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/tv_privacy_statement"
        app:layout_constraintTop_toBottomOf="@id/tv_userid"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="64dp"
        android:layout_marginTop="30dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_privacy_statement"
        android:textColor="@color/app_color_main_text"
        android:textSize="16sp" />
    
    <ImageView
        app:layout_constraintTop_toTopOf="@id/tv_privacy_statement"
        app:layout_constraintBottom_toBottomOf="@id/tv_privacy_statement"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/app_ic_details"
        android:layout_marginRight="20dp"
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <ImageView
        android:id="@+id/iv_statement"
        app:layout_constraintTop_toTopOf="@id/tv_statement"
        app:layout_constraintBottom_toBottomOf="@id/tv_statement"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:background="@drawable/app_ic_statement"
        android:layout_width="32dp"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/tv_statement"
        app:layout_constraintTop_toBottomOf="@id/tv_privacy_statement"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="64dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_statement"
        android:textColor="@color/app_color_main_text"
        android:textSize="16sp" />

    <ImageView
        app:layout_constraintTop_toTopOf="@id/tv_statement"
        app:layout_constraintBottom_toBottomOf="@id/tv_statement"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/app_ic_details"
        android:layout_marginRight="20dp"
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <ImageView
        android:id="@+id/iv_about"
        app:layout_constraintTop_toTopOf="@id/tv_about"
        app:layout_constraintBottom_toBottomOf="@id/tv_about"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:background="@drawable/app_ic_about"
        android:layout_width="32dp"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/tv_about"
        app:layout_constraintTop_toBottomOf="@id/tv_statement"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="64dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_about"
        android:textColor="@color/app_color_main_text"
        android:textSize="16sp" />

    <ImageView
        app:layout_constraintTop_toTopOf="@id/tv_about"
        app:layout_constraintBottom_toBottomOf="@id/tv_about"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/app_ic_details"
        android:layout_marginRight="20dp"
        android:layout_width="16dp"
        android:layout_height="16dp" />

</android.support.constraint.ConstraintLayout>
